fix: block spacing

--- a/hlx_statics/blocks/discoverblock/discoverblock.css
+++ b/hlx_statics/blocks/discoverblock/discoverblock.css
@@ -55,7 +55,6 @@ main div.discoverblock-container-wrapper{
     display: flex;
     flex-wrap: wrap;
     column-gap: 50px;
-    margin: 20px 0;
     row-gap: 40px;
 }
 main div.discoverblock-wrapper div.discoverblock-column .discover-child-container{
